# leitura_dinamica

./: .env.example  .gitignore  .vercelignore  README.md  firestore.rules  next.config.ts  package-lock.json  package.json  playwright.config.ts  push_err.txt  reanalyze.js  tsconfig.tsbuildinfo  unificar_build.py
.next/: BUILD_ID  required-server-files.js  trace  trace-build
.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
.next/dev/: trace
.next/server/: server-reference-manifest.js
.next/standalone/: server.js
.next/types/: validator.ts
api/: health.js  process-audio.js
app/: globals.css  layout.tsx  page.tsx
app/components/: FirebaseProvider.tsx  Layout.tsx  LoginForm.tsx  MobileCards.tsx  MobileExperienceProvider.tsx  MobileNav.tsx  MobilePerformanceMonitor.tsx  PWAProvider.tsx  ProtectedRoute.tsx  SettingsProvider.tsx  StudentFilterSelects.tsx  (+1 more)
backend/: analysisService.js  build_exe.py  create_teachers.py  index.js  main.py  package-lock.json  package.json  pcmUtils.js  pyproject.toml
backend-python/: pcm_utils.py  seed_data.py
backend/app/core/: tray.py
backend/app/services/: ai_service.py
docs/: DOCUMENTACAO_CIENTIFICA.md  mobile-experience.md  regras-firebase.md  segurança e melhorias.md  sistema_PRD.md  student_import_model.md
frontend/: package-lock.json  package.json  vite.config.ts
lib/: analysisService.ts  auth.ts  evaluationsService.ts  firebase.ts  pcmUtils.ts  resetDatabaseService.ts  services.ts  statsUtils.ts  styleUtils.ts  textsService.ts
public/: sw.js
scripts/: generate-icons.js
tests/: mobile-experience.spec.ts
(+288 files in other folders)
